--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,13 @@ jobs:
         with:
           node-version: '18'
           cache: 'pnpm'
-      - name: Install pnpm
-        run: npm install -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      - name: Verify pnpm
+        run: pnpm -v
       - name: Install deps
         run: pnpm install --frozen-lockfile
       - name: Lint
