--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - name: Install pnpm
-        run: npm install -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      - name: Verify pnpm
+        run: pnpm -v
       - name: Frontend install + build
         working-directory: frontend
         run: |
