--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+      - name: Enable Corepack
+        run: corepack enable
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
           run_install: false
+      - name: Activate pnpm via Corepack
+        run: corepack prepare pnpm@9 --activate
       - name: Verify pnpm
         run: pnpm -v
       - name: Frontend install + build
