--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,12 @@ jobs:
         run: corepack prepare pnpm@9 --activate
       - name: Verify pnpm
         run: pnpm -v
+      - name: Fallback install pnpm (if missing)
+        if: ${{ failure() }}
+        run: |
+          echo "pnpm activation failed, installing globally via npm"
+          npm install -g pnpm@9
+          pnpm -v
       - name: Frontend install + build
         working-directory: frontend
         run: |
