--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,23 +49,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'pnpm'
-      - name: Enable Corepack
-        run: corepack enable
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-      - name: Activate pnpm via Corepack
-        run: corepack prepare pnpm@9 --activate
+      - name: Install pnpm globally
+        run: npm install -g pnpm@9
       - name: Verify pnpm
         run: pnpm -v
-      - name: Fallback install pnpm (if missing)
-        if: ${{ failure() }}
-        run: |
-          echo "pnpm activation failed, installing globally via npm"
-          npm install -g pnpm@9
-          pnpm -v
       - name: Install deps
         run: pnpm install --frozen-lockfile
       - name: Lint
