--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,23 +18,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - name: Enable Corepack
-        run: corepack enable
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-      - name: Activate pnpm via Corepack
-        run: corepack prepare pnpm@9 --activate
+      - name: Install pnpm globally
+        run: npm install -g pnpm@9
       - name: Verify pnpm
         run: pnpm -v
-      - name: Fallback install pnpm (if missing)
-        if: ${{ failure() }}
-        run: |
-          echo "pnpm activation failed, installing globally via npm"
-          npm install -g pnpm@9
-          pnpm -v
       - name: Frontend install + build
         working-directory: frontend
         run: |
