--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'pnpm'
-      - name: Install pnpm globally
-        run: npm install -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+         with:
+          version: 9
       - name: Verify pnpm
         run: pnpm -v
       - name: Install deps
