--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,41 +8,47 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GH_TOKEN }}
 
-      - name: Setup Node.js (for frontend build)
+      # FIX: Install pnpm BEFORE setup-node
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-      - name: Install pnpm globally
-        run: npm install -g pnpm@9
-      - name: Verify pnpm
-        run: pnpm -v
+          node-version: "18"
+          cache: pnpm
+          cache-dependency-path: frontend/pnpm-lock.yaml
+
       - name: Frontend install + build
         working-directory: frontend
         run: |
           pnpm install --frozen-lockfile
           pnpm run build
 
-      - name: Setup Java (optional for backend build)
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: "17"
+
       - name: Backend package (skip tests for faster deploy)
         working-directory: backend
         run: mvn -B -q -DskipTests package
 
+      # FIX: Use valid version 5.2.1 instead of v8.0.1
       - name: Copy repo to server
-        uses: burnett01/rsync-deployments@v8.0.1
+        uses: burnett01/rsync-deployments@5.2.1
         with:
           switches: -avz --delete
           path: ./
-          remote_path: /opt/agrobank
+          remote_path: /opt/agrobank/agrobank_hakaton
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_user: ${{ secrets.DEPLOY_USER }}
           remote_key: ${{ secrets.DEPLOY_SSH_KEY }}
@@ -55,6 +61,7 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
             set -e
+            mkdir -p /opt/agrobank/agrobank_hakaton
             cd /opt/agrobank/agrobank_hakaton
             docker compose pull || true
             docker compose build
