--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,30 +38,36 @@ jobs:
         run: mvn -B -q -DskipTests=false test
 
   frontend:
-    name: Frontend (SvelteKit)
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
+  name: Frontend (SvelteKit)
+  runs-on: ubuntu-latest
+  defaults:
+    run:
+      working-directory: frontend
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-          cache: 'pnpm'
-          cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Install deps
-        run: pnpm install --frozen-lockfile
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Lint
-        run: pnpm run lint
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: "18"
+        cache: 'pnpm'
+        cache-dependency-path: frontend/pnpm-lock.yaml
 
-      - name: Build
-        run: pnpm run build
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9
+
+    - name: Verify pnpm
+      run: pnpm -v   # workflow da pnpm o‘rnatilganligini tekshiradi
+
+    - name: Install deps
+      run: pnpm install --frozen-lockfile
+
+    - name: Lint
+      run: pnpm run lint
+
+    - name: Build
+      run: pnpm run build
