--- a/frontend/project.inlang/settings.json
+++ b/frontend/project.inlang/settings.json
@@ -8,9 +8,5 @@
 		"pathPattern": "./messages/{locale}.json"
 	},
 	"baseLocale": "en",
-	"locales": [
-		"en",
-		"uz",
-		"ru"
-	]
+	"locales": ["en", "uz", "ru"]
 }
