feat: implement backend and frontend Dockerfiles and update docker-compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,28 @@ services:
     ports:
       - "6379:6379"
 
+  backend:
+    build: ./backend
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/appdb
+      SPRING_DATASOURCE_USERNAME: appuser
+      SPRING_DATASOURCE_PASSWORD: ap_pass
+    depends_on:
+      - db
+      - redis
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - db
+      - redis
+
 volumes:
   db-data:
