--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy repo to server
-        uses: burnett01/rsync-deployments@v5.2.1
+        uses: burnett01/rsync-deployments@5.2.1
         with:
           switches: -avz --delete
           path: ./
